--- a/app/src/main/res/drawable/gradien.xml
+++ b/app/src/main/res/drawable/gradien.xml
@@ -7,7 +7,7 @@
         android:width="2dp"
         />
     <solid
-        android:color="@color/white"/>
+        android:color="@color/white_theme"/>
     <corners
         android:radius="50dp"/>
 
