--- a/app/src/main/res/layout/alert_saved_item.xml
+++ b/app/src/main/res/layout/alert_saved_item.xml
@@ -32,7 +32,7 @@
             android:fontFamily="@font/lemon"
             android:text="@string/from"
             android:textAllCaps="false"
-            android:textColor="@color/grey"
+            android:textColor="@color/dialog_text"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@id/saved_alert_img"
             app:layout_constraintTop_toTopOf="@id/saved_alert_img" />
@@ -45,7 +45,7 @@
             android:fontFamily="@font/lemon"
             android:text="@string/to"
             android:textAllCaps="false"
-            android:textColor="@color/grey"
+            android:textColor="@color/dialog_text"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@id/saved_alert_img"
             app:layout_constraintTop_toBottomOf="@id/from_text" />
@@ -58,7 +58,7 @@
             android:fontFamily="@font/lemon"
             android:text="@string/time"
             android:textAllCaps="false"
-            android:textColor="@color/grey"
+            android:textColor="@color/dialog_text"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@id/saved_alert_img"
             app:layout_constraintTop_toBottomOf="@id/to_text" />
@@ -71,7 +71,7 @@
             android:fontFamily="@font/lemon"
             android:text="@string/zone"
             android:textAllCaps="false"
-            android:textColor="@color/grey"
+            android:textColor="@color/dialog_text"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/saved_alert_img"
