--- a/app/src/main/res/layout/fav_item.xml
+++ b/app/src/main/res/layout/fav_item.xml
@@ -60,6 +60,8 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="@color/white_fav"
+
                     >
                     <ImageView
                         android:layout_width="50dp"
