--- a/app/src/main/res/layout/fragment_fav_details.xml
+++ b/app/src/main/res/layout/fragment_fav_details.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="150dp"
         android:fontFamily="@font/lemon"
-        android:textColor="@color/purple_500"
+        android:textColor="@color/alert_title"
         android:textSize="24sp"
         android:text="@string/loading"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -55,6 +55,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:cardCornerRadius="125dp"
+                app:cardElevation="0dp"
                 android:backgroundTint="@color/purple_700">
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -149,6 +150,7 @@
                 android:id="@+id/more_details_card"
                 app:cardCornerRadius="50dp"
                 android:layout_margin="10dp"
+                app:cardElevation="0dp"
                 android:backgroundTint="@color/orange"
                 app:layout_constraintTop_toBottomOf="@id/recycler_days"
                 app:layout_constraintEnd_toEndOf="parent"
