--- a/app/src/main/res/layout/fragment_fav_details.xml
+++ b/app/src/main/res/layout/fragment_fav_details.xml
@@ -64,13 +64,12 @@
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/city_name"
                         android:drawableStart="@drawable/location"
-                        android:layout_width="wrap_content"
+                        android:layout_width="200dp"
+                        android:gravity="center"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="30dp"
-                        android:layout_marginEnd="10dp"
-                        android:paddingStart="2dp"
                         android:textColor="@color/white"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
                         android:fontFamily="@font/lemon"
                         app:layout_constraintBottom_toTopOf="@id/weather_mood"
                         app:layout_constraintEnd_toEndOf="parent"
