--- a/app/src/main/res/layout/fragment_alert.xml
+++ b/app/src/main/res/layout/fragment_alert.xml
@@ -30,6 +30,21 @@
                 app:lottie_autoPlay="true"
                 app:lottie_loop="true"
                 app:lottie_rawRes="@raw/orangebell" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/no_alert_yet"
+                android:textSize="16sp"
+                android:textColor="@color/dialog_text"
+                android:fontFamily="@font/lemon"
+                android:id="@+id/empty_msg"
+                android:layout_marginTop="150dp"
+                app:layout_constraintTop_toBottomOf="@id/gif_setting"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:visibility="gone"
+                />
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
